--- a/BookReviewApp.Web/Views/Reviews/Create.cshtml
+++ b/BookReviewApp.Web/Views/Reviews/Create.cshtml
@@ -1,4 +1,4 @@
-@model BookReviewApp.Domain.Models.Review
+@model BookReviewApp.Web.Models.ReviewViewModel
 
 @{
     ViewData["Title"] = "Add Review";
