--- a/BookReviewApp.Web/Views/Shared/_Layout.cshtml
+++ b/BookReviewApp.Web/Views/Shared/_Layout.cshtml
@@ -232,10 +232,18 @@
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="social-icons d-flex justify-content-center justify-content-md-end gap-3">
-                        <a href="#" aria-label="Facebook" class="text-white fs-4"><i class="bi bi-facebook"></i></a>
-                        <a href="#" aria-label="Twitter" class="text-white fs-4"><i class="bi bi-twitter"></i></a>
-                        <a href="#" aria-label="Instagram" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
-                        <a href="#" aria-label="LinkedIn" class="text-white fs-4"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.facebook.com/BookReviewApp" target="_blank" aria-label="Facebook" class="text-white fs-4" title="Follow us on Facebook">
+                            <i class="bi bi-facebook"></i>
+                        </a>
+                        <a href="https://www.tiktok.com/@bookreviewapp" target="_blank" aria-label="TikTok" class="text-white fs-4" title="Follow us on TikTok">
+                            <i class="bi bi-tiktok"></i>
+                        </a>
+                        <a href="https://www.instagram.com/bookreviewapp" target="_blank" aria-label="Instagram" class="text-white fs-4" title="Follow us on Instagram">
+                            <i class="bi bi-instagram"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/company/bookreviewapp" target="_blank" aria-label="LinkedIn" class="text-white fs-4" title="Follow us on LinkedIn">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
                     </div>
                 </div>
             </div>
